# player-dispatcher

./: .gitignore  BenchReport.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: Cargo.toml  bench_main.rs
benches/benchmarks/: aoe.rs  login.rs  mod.rs  moving.rs  query.rs
common/: Cargo.toml  build.rs  game_service.proto  map_service.proto
common/src/: lib.rs
common/tests/: test.rs
dispatcher/: Cargo.toml  build.rs
dispatcher/src/: dispatcher.rs  dispatcher_bk.rs  grpc.rs  lib.rs  main.rs  server_scaling.rs  util.rs
game-server/: Cargo.toml  Dockerfile
game-server/benches/: bench_main.rs
game-server/benches/benchmarks/: login.rs
game-server/src/: data.rs  dispatcher.rs  game_impl.rs  game_service.rs  lib.rs  main.rs  server_scaling.rs  util.rs
game-server/tests/: mod.rs
game-server/tests/game/: aoe.rs  login.rs  mod.rs  moving.rs  query.rs
game-server/tests/scaling/: close.rs  expand.rs  mod.rs
map-server/: Cargo.toml  Dockerfile
map-server/src/: game_impl.rs  lib.rs  main.rs  map_impl.rs  server.rs
map-server/src/api/: game_service.rs  map_service.rs  mod.rs
map-server/tests/: mod.rs
map-server/tests/game/: aoe.rs  mod.rs  moving.rs  query.rs
proto/: Cargo.toml  build.rs  game_interface.proto  game_service.proto  map_service.proto
src/: main.rs
