[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam-skiplist = "0.1"
ert = { git = "https://github.com/dlhxzb/ert.git", branch = "chase-tokio-1" }
futures = "0.3"
rayon = "1.7.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

common = { path = "../common" }

