[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
map_server_inside = [ "map-server" ] # 内部创建启动map_server对象。用于测试

[dependencies]
anyhow = "1.0"
crossbeam-skiplist = "0.1"
econf = "0.2.1"
ert = { git = "https://github.com/dlhxzb/ert.git", branch = "chase-tokio-1" }
futures = "0.3"
once_cell = "1.18"
rayon = "1.7.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

common = { path = "../common" }
map-server = { path = "../map-server", optional = true }

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
futures = "0.3"
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.9"
game-server = { path = "../game-server" }
common = { path = "../common" }

[[bench]]
name = "bench_main"
harness = false